samples/_failures_safe/1761270644_f527cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a0ce592.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_1a0ce592.c:160:5: error: expected expression at end of input
  160 |     if (state == NULL)
      |     ^~
./samples/SAFE/__tmp_1a0ce592.c:160:5: error: expected declaration or statement at end of input
